; ModuleID = '/home/carl/AnghaBench/linux/drivers/virtio/extr_virtio_balloon.c_virtio_balloon_register_shrinker.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/virtio/extr_virtio_balloon.c_virtio_balloon_register_shrinker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.virtio_balloon = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }

@virtio_balloon_shrinker_scan = common dso_local global i32 0, align 4
@virtio_balloon_shrinker_count = common dso_local global i32 0, align 4
@DEFAULT_SEEKS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.virtio_balloon*)* @virtio_balloon_register_shrinker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @virtio_balloon_register_shrinker(%struct.virtio_balloon* %0) #0 {
  %2 = alloca %struct.virtio_balloon*, align 8
  store %struct.virtio_balloon* %0, %struct.virtio_balloon** %2, align 8
  %3 = load i32, i32* @virtio_balloon_shrinker_scan, align 4
  %4 = load %struct.virtio_balloon*, %struct.virtio_balloon** %2, align 8
  %5 = getelementptr inbounds %struct.virtio_balloon, %struct.virtio_balloon* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 2
  store i32 %3, i32* %6, align 4
  %7 = load i32, i32* @virtio_balloon_shrinker_count, align 4
  %8 = load %struct.virtio_balloon*, %struct.virtio_balloon** %2, align 8
  %9 = getelementptr inbounds %struct.virtio_balloon, %struct.virtio_balloon* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  store i32 %7, i32* %10, align 4
  %11 = load i32, i32* @DEFAULT_SEEKS, align 4
  %12 = load %struct.virtio_balloon*, %struct.virtio_balloon** %2, align 8
  %13 = getelementptr inbounds %struct.virtio_balloon, %struct.virtio_balloon* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i32 %11, i32* %14, align 4
  %15 = load %struct.virtio_balloon*, %struct.virtio_balloon** %2, align 8
  %16 = getelementptr inbounds %struct.virtio_balloon, %struct.virtio_balloon* %15, i32 0, i32 0
  %17 = call i32 @register_shrinker(%struct.TYPE_2__* %16)
  ret i32 %17
}

declare dso_local i32 @register_shrinker(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
